--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">The Environment</string>
+
+    <string name="please_wait">Please Wait</string>
+    <string name="loading">Loading</string>
+    <string name="view">VIEW</string>
 </resources>
