--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,18 +13,28 @@
 
     <string name="github">GITHUB</string>
     <string name="other_apps">OTHER APPS</string>
-    <string name="author_header">AUTHOR</string>
+    <string name="author_header">AUTHORS</string>
     <string name="credits_header">CREDITS</string>
     <string name="libraries_header">OPEN SOURCE LICENSES</string>
     <string name="license_header">LICENSE</string>
     <string name="inspiration_header">INSPIRATION</string>
     <string name="build_version">Build version</string>
     <string name="dev_1_title">Aaditya Menon</string>
-    <string name="dev_1_name">\@Sparker0i</string>
-    <string name="dev_1_link">http://sparker0i.in</string>
-    <string name="dev_2_title">OpenWeatherMap</string>
-    <string name="dev_2_name">OpenWeatherMap Inc.</string>
-    <string name="dev_2_link">https://openweathermap.org/</string>
+    <string name="dev_1_name">App Developer</string>
+    <string name="dev_1_link">http://blog.sparker0i.me</string>
+    <string name="dev_2_title">Aswin M Guptha</string>
+    <string name="dev_2_name">Blog Parser</string>
+    <string name="dev_2_link">https://www.facebook.com/aswinmguptha</string>
+    <string name="dev_3_title">Amretanand Balan</string>
+    <string name="dev_3_name">Blog Picker</string>
+    <string name="dev_3_link">https://www.facebook.com/amruthanand.balan</string>
+    <string name="dev_4_title">Rahul P</string>
+    <string name="dev_4_name">Icon Designer</string>
+    <string name="dev_4_link">https://www.facebook.com/rahul.from.97</string>
+    <string name="dev_5_title">Sachin Sudheer</string>
+    <string name="dev_5_name">Icon Designer</string>
+    <string name="dev_5_link">https://www.facebook.com/sachin.sudheer</string>
+    <string name="facebook">FACEBOOK</string>
     <string name="app_license">App License</string>
     <string name="app_license_value">GNU GPL v3</string>
 
@@ -116,4 +126,8 @@
     <string name="other_apps_link">https://play.google.com/store/apps/dev?id=6116967233401290402</string>
     <string name="app_link_direct">https://play.google.com/store/apps/details?id=com.a5corp.weather</string>
     <string name="github_link">https://github.com/Sparker0i</string>
+    <string name="aswin_link">https://www.facebook.com/aswinmguptha</string>
+    <string name="amretanand_link">https://www.facebook.com/amruthanand.balan</string>
+    <string name="rahul_link">https://www.facebook.com/rahul.from.97</string>
+    <string name="sachin_link">https://www.facebook.com/sachin.sudheer</string>
 </resources>
